Slight refactoring done for grpchat

--- a/grpchat/index.html
+++ b/grpchat/index.html
@@ -12,7 +12,7 @@
         <script type="text/javascript" src="js/spin.min.js"></script>
         <script type="text/javascript" src="js/adapter.js?1" ></script>
         <script type="text/javascript" src="js/janus.js?1" ></script>
-        <script type="text/javascript" src="js/trlshidur.js?1"></script>
+        <script type="text/javascript" src="js/grpchat.js?1"></script>
         <script type="text/javascript" src="js/chat.js?1"></script>
         <link rel="stylesheet" href="css/cerulean/bootstrap.css" type="text/css"/>
         <link rel="stylesheet" href="css/demo.css" type="text/css"/>
