add to chat only user: shidur status and request sending

--- a/trlchat/index.html
+++ b/trlchat/index.html
@@ -105,6 +105,7 @@ document.addEventListener('DOMContentLoaded', function () {
 					</div>
 				</div>
 			</div>
+			<button type="button" id="support" class="btn btn-primary btn-xs disabled" value="Support" style="position: absolute; top: 10px; left: 240px;"><i class="fa fa-headphones fa-lg"></i> Support Offline</button>
 			<div class="container hide" id="chat">
 				<div class="row">
 					<div class="col-md-12">
