--- a/trl/index.html
+++ b/trl/index.html
@@ -15,13 +15,12 @@
 <script type="text/javascript" src="js/janus.js?1" ></script>
 <script type="text/javascript" src="js/volume-meter/volume-meter.js"></script>
 <script type="text/javascript" src="js/volume-meter/main.js"></script>
-<script type="text/javascript" src="js/trlclient.js?1"></script>
+<script type="text/javascript" src="js/stream.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/audio.js"></script>
 <script type="text/javascript" src="js/chat.js"></script>
-<script type="text/javascript" src="js/functions.js"></script>
-<!--script type="text/javascript" src="support.js"></script-->
 <link rel="stylesheet" href="css/cerulean/bootstrap.css" type="text/css"/>
 <link rel="stylesheet" href="css/demo.css" type="text/css"/>
-<!--link rel="stylesheet" href="css/font-awesome.css"/-->
 <link rel="stylesheet" href="css/font-awesome.min.css">
 <link href="css/slider2.css" rel="stylesheet">
 <style>
