--- a/trlshidur/index.html
+++ b/trlshidur/index.html
@@ -13,10 +13,11 @@
 <script type="text/javascript" src="js/control.js"></script>
 <script type="text/javascript" src="js/adapter.js?1" ></script>
 <script type="text/javascript" src="js/janus.js?1" ></script>
+<script type="text/javascript" src="js/audio.js"></script>
 <script type="text/javascript" src="js/trlshidur.js?1"></script>
 <script type="text/javascript" src="js/chat.js?1"></script>
 <link rel="stylesheet" href="css/cerulean/bootstrap.css" type="text/css"/>
-<link rel="stylesheet" href="css/demo.css" type="text/css"/>
+<!--link rel="stylesheet" href="css/demo.css" type="text/css"/-->
 <link rel="stylesheet" href="css/font-awesome.css"/>
 <link href="css/slider2.css" rel="stylesheet">
 <style>
@@ -33,12 +34,17 @@ input#trlvolumeslider{ width: 250px;}
 input#mixvolumeslider{ width: 180px;}
 input#micvolumeslider{ width: 180px;}
 .col-md-12 {
-    width: 800px;
+    width: 1000px;
     margin-right: 2px;
 }
 .col-md-10 {
    float: left;
-    width: 600px;
+    width: 800px;
+    margin-right: 2px;
+}
+.col-md-3 {
+   float: left;
+    width: 300px;
     margin-right: 2px;
 }
 .list-group-item {
@@ -54,117 +60,46 @@ document.addEventListener('DOMContentLoaded', function () {
 </script>
 </head>
 <body>
-<!--script>
-<h1><span class="label label-danger">Warning Label</span></h1-->
 <hr>
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<div class="page-header hide">
-					<button class="btn btn-warning disabled" autocomplete="off" id="start">Connect</button>
-					&nbsp;&nbsp;&nbsp;&nbsp;
-					<button class="btn btn-success hide" id="startForward">&nbsp;&nbsp;Start&nbsp;&nbsp;</button>
-                                        <button class="btn btn-danger disabled hide" id="stopForward">&nbsp;&nbsp;Stop&nbsp;&nbsp;</button>
-                                <div class="btn-group btn-group-sm">
-                                 <button autocomplete="off" id="translate" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Translation room: <span class="caret"></span></button>
-                                    <ul id="translatelist" class="dropdown-menu" role="menu">
-                                        <li><a href="#" id="15">Hebrew</a></li>
-                                        <li><a href="#" id="23">Russian</a></li>
-                                        <li><a href="#" id="24">English</a></li>
-                                        <li><a href="#" id="25">French</a></li>
-                                        <li><a href="#" id="26">Spanish</a></li>
-                                        <li><a href="#" id="27">German</a></li>
-                                        <li><a href="#" id="28">Italian</a></li>
-					<li><a href="#" id="42">Turkish</a></li>
-					<li><a href="#" id="41">Portuguese</a></li>
-					<li><a href="#" id="43">Bulgarian</a></li>
-					<li><a href="#" id="44">Georgian</a></li>
-					<li><a href="#" id="45">Romanian</a></li>
-					<li><a href="#" id="46">Hungarian</a></li>
-					<li><a href="#" id="47">Swedish</a></li>
-					<li><a href="#" id="48">Lithuanian</a></li>
-					<li><a href="#" id="49">Croatian</a></li>
-					<li><a href="#" id="50">Japanese</a></li>
-					<li><a href="#" id="51">Slovenian</a></li>
-					<li><a href="#" id="52">Polish</a></li>
-					<li><a href="#" id="53">Norvegian</a></li>
-					<li><a href="#" id="54">Latvian</a></li>
-					<li><a href="#" id="55">Ukrainian</a></li>
-					<li><a href="#" id="56">Niderland</a></li>
-                                    </ul>
-                                </div>
-                        </div>
+<div class="col-md-3">
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Translation Rooms<span class="label label-primary" id="publisher"></span></h3>
+		</div>
+		<div class="panel-body" style="margin: 10px; height: 247px; overflow-y: scroll;">
+		<!--h4>Sessions (<span id="sessions-num">0</span>) <i id="update-sessions" class="fa fa-refresh" title="Refresh list of sessions" style="cursor: pointer;"></i></h4-->
+		<div id="rooms-list" class="list-group">
+		</div>
+		</div>
+	</div>
+</div>
+<div class="col-md-10">
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 style="position: absolute;" class="panel-title"> <span class="label label-danger hide" id="supusername"></span></h3>
+			<div id="trlctlbar">
+			<h5 style="position: absolute; top: 0px; right: 30px; align: right">Online translators<span class="label label-success"></span></h5>
+			<input id="trlvolumeslider" type="range" min="0" max="100" value="100" step="1" style="right: 100px;">
+			<button class="btn btn-warning btn-sm" id="trlmutebtn" style="position: absolute; top: -5px; right: 160px; margin: 10px;"><span class="glyphicon glyphicon-volume-off"></span></button>
 			</div>
-			<div class="container" id="details">
-				<div class="row">
-					<div class="col-md-5">
-					</div>
-				</div>
+		</div>
+		<div class="panel-body" id="micaudio">
+			<audio id="transAudio" controls autoplay></audio>
+			<div class="input-group margin-bottom-sm" id="dataout" style="height: 150px;">
+			<div contenteditable="true" id="datarecv" name="datarecv" style="font-size: 12px; margin: 10px;height: 150px;width: 580px; overflow-y: scroll;"></div>
 			</div>
-			<div class="container hide" id="videojoin">
-				<div class="row">
-					<span class="label label-info" id="you"></span>
-					<div class="col-md-5" id="controls">
-						<div class="input-group margin-bottom-md hide" id="registernow">
-							<span class="input-group-addon">@</span>
-							<input autocomplete="off" class="form-control" autocomplete="off" type="text" placeholder="Choose a display name" id="username" onkeypress="return checkregEnter(this, event);"></input>
-							<span class="input-group-btn">
-								<button class="btn btn-success" autocomplete="off" id="register">Enter</button>
-							</span>
-						</div>
-					</div>
-				</div>
 			</div>
-			<div class="container" id="chat">
-				<div class="row">
-					<div class="col-md-3">
-                                                <div class="panel panel-default">
-							<audio id="remoteAudio" controls autoplay></audio>
-                                                        <div class="panel-heading">
-                                                                <h3 class="panel-title">Translation Rooms<span class="label label-primary" id="publisher"></span></h3>
-                                                        </div>
-                                                        <div class="panel-body" style="margin: 10px; height: 247px; overflow-y: scroll;">
-                                                        <!--h4>Sessions (<span id="sessions-num">0</span>) <i id="update-sessions" class="fa fa-refresh" title="Refresh list of sessions" style="cursor: pointer;"></i></h4-->
-                                                        <div id="rooms-list" class="list-group">
-                                                        </div>
-                                                        </div>
-                                                </div>
-                                        </div>
-					<div class="col-md-12">
-						<div class="panel panel-default">
-                                                        <div class="panel-heading">
-                                                                <h3 style="position: absolute;" class="panel-title"> <span class="label label-danger hide" id="supusername"></span></h3>
-								<div id="trlctlbar">
-								<h5 style="position: absolute; top: 0px; right: 30px; align: right">Online translators<span class="label label-success"></span></h5>
-								<input id="trlvolumeslider" type="range" min="0" max="100" value="100" step="1" style="right: 100px;">
-								<button class="btn btn-warning btn-sm" id="trlmutebtn" style="position: absolute; top: -5px; right: 160px; margin: 10px;"><span class="glyphicon glyphicon-volume-off"></span></button>
-								</div>
-                                                        </div>
-                                                        <div class="panel-body" id="micaudio">
-								<audio id="transAudio" controls autoplay></audio>
-								<audio id="mixAudio" controls autoplay></audio>
-                                                                <div class="input-group margin-bottom-sm" id="dataout" style="height: 150px;">
-                                                                <div contenteditable="true" id="datarecv" name="datarecv" style="font-size: 12px; margin: 10px;height: 150px;width: 580px; overflow-y: scroll;"></div>
-                                                        	</div>
-								</div>
-								<div class="panel panel-default" style="position: absolute; bottom: 90px; right: 22px; height: 150px;width: 150px;">
-								<div id="sessions-list" class="list-group">
-                                                                </div>
-								</div>
-								<div class="panel-footer"
-								<div class="input-group margin-bottom-sm" id="datain">
-                                                                <input class="form-control" id="datasend" type="text" size=120 placeholder="Write here" autocomplete="off" onkeypress="return checkEnter(this, event);" disabled></input>
-								</div>
-                                                                </div>
-							</div>
-                                                </div>
-					</div>
-				</div>
+			<div class="panel panel-default" style="position: absolute; bottom: 90px; right: 22px; height: 150px;width: 150px;">
+			<div id="list" class="list-group">
+			</div>
+			</div>
+			<div class="panel-footer">
+			<div class="input-group margin-bottom-sm" id="datain">
+			<input class="form-control" id="datasend" type="text" size=120 placeholder="Write here" autocomplete="off" onkeypress="return checkEnter(this, event);" disabled></input>
+			</div>
 			</div>
 		</div>
 	</div>
-
-	<hr>
 </div>
 </body>
 </html>
