fix bug in trlshidur + add open window on notification click

--- a/trlshidur/index.html
+++ b/trlshidur/index.html
@@ -101,5 +101,6 @@ document.addEventListener('DOMContentLoaded', function () {
 		</div>
 	</div>
 </div>
+<iframe width="1200" height="800" src="../grpchat/index.html" class="iframe" scrolling="no" frameborder="0"></iframe>
 </body>
 </html>
