add talk notify for chat and shidur, library update

--- a/trlshidur/index.html
+++ b/trlshidur/index.html
@@ -11,10 +11,10 @@
 <script type="text/javascript" src="js/bootbox.min.js"></script>
 <script type="text/javascript" src="js/spin.min.js"></script>
 <script type="text/javascript" src="js/control.js"></script>
-<script type="text/javascript" src="js/adapter.js?1" ></script>
-<script type="text/javascript" src="js/janus.js?1" ></script>
-<script type="text/javascript" src="js/trlshidur.js?1"></script>
-<script type="text/javascript" src="js/chat.js?1"></script>
+<script type="text/javascript" src="js/adapter.js?2" ></script>
+<script type="text/javascript" src="js/janus.js?2" ></script>
+<script type="text/javascript" src="js/trlshidur.js?2"></script>
+<script type="text/javascript" src="js/chat.js?2"></script>
 <link rel="stylesheet" href="css/cerulean/bootstrap.css" type="text/css"/>
 <link rel="stylesheet" href="css/demo.css" type="text/css"/>
 <link rel="stylesheet" href="css/font-awesome.css"/>
@@ -91,6 +91,7 @@ document.addEventListener('DOMContentLoaded', function () {
 					<li><a href="#" id="54">Latvian</a></li>
 					<li><a href="#" id="55">Ukrainian</a></li>
 					<li><a href="#" id="56">Niderland</a></li>
+					<li><a href="#" id="57">China</a></li>
                                     </ul>
                                 </div>
                         </div>
@@ -159,6 +160,7 @@ document.addEventListener('DOMContentLoaded', function () {
 							</div>
                                                 </div>
 					</div>
+					<iframe width="1200" height="800" src="../grpchat/index.html" class="iframe" scrolling="no" frameborder="0"></iframe>
 				</div>
 			</div>
 		</div>
