--- a/trlchat/index.html
+++ b/trlchat/index.html
@@ -12,8 +12,8 @@
 <script type="text/javascript" src="js/spin.min.js"></script>
 <script type="text/javascript" src="js/adapter.js?1" ></script>
 <script type="text/javascript" src="js/janus.js?1" ></script>
-<script type="text/javascript" src="js/trlchat.js?1"></script>
-<script type="text/javascript" src="js/textroomtest.js?1"></script>
+<script type="text/javascript" src="js/trlclient.js"></script>
+<script type="text/javascript" src="js/chat.js"></script>
 <link rel="stylesheet" href="css/cerulean/bootstrap.css" type="text/css"/>
 <link rel="stylesheet" href="css/demo.css" type="text/css"/>
 <link rel="stylesheet" href="css/font-awesome.css"/>
@@ -81,6 +81,7 @@ document.addEventListener('DOMContentLoaded', function () {
                                         <li><a href="#" id="54">Latvian</a></li>
                                         <li><a href="#" id="55">Ukrainian</a></li>
                                         <li><a href="#" id="56">Niderland</a></li>
+					<li><a href="#" id="57">China</a></li>
                                     </ul>
                                 </div>
                         </div>
