update for safari support

--- a/trl/index.html
+++ b/trl/index.html
@@ -11,16 +11,14 @@
 <script type="text/javascript" src="js/bootbox.min.js"></script>
 <script type="text/javascript" src="js/spin.min.js"></script>
 <script type="text/javascript" src="js/control.js"></script>
-<script type="text/javascript" src="js/adapter.js?1" ></script>
-<script type="text/javascript" src="js/janus.js?1" ></script>
+<script type="text/javascript" src="js/adapter.js?4" ></script>
+<script type="text/javascript" src="js/janus.js?4" ></script>
 <script type="text/javascript" src="js/volume-meter/volume-meter.js"></script>
-<script type="text/javascript" src="js/volume-meter/main.js"></script>
-<script type="text/javascript" src="js/trlclient.js?1"></script>
-<script type="text/javascript" src="js/chat.js"></script>
-<!--script type="text/javascript" src="support.js"></script-->
+<script type="text/javascript" src="js/volume-meter/main.js?1"></script>
+<script type="text/javascript" src="js/trlclient.js?3"></script>
+<script type="text/javascript" src="js/chat.js?3"></script>
 <link rel="stylesheet" href="css/cerulean/bootstrap.css" type="text/css"/>
 <link rel="stylesheet" href="css/demo.css" type="text/css"/>
-<!--link rel="stylesheet" href="css/font-awesome.css"/-->
 <link rel="stylesheet" href="css/font-awesome.min.css">
 <link href="css/slider2.css" rel="stylesheet">
 <style>
@@ -121,6 +119,7 @@ document.addEventListener('DOMContentLoaded', function () {
                         <li><a href="#" id="54">Latvian</a></li>
 			<li><a href="#" id="55">Ukrainian</a></li>
                         <li><a href="#" id="56">Niderland</a></li>
+			<li><a href="#" id="57">China</a></li>
 		    </ul>
 		</div>
 		<div class="btn-group btn-group-sm">
@@ -198,6 +197,7 @@ document.addEventListener('DOMContentLoaded', function () {
 						<li><a href="#" id="54">Latvian</a></li>
 						<li><a href="#" id="55">Ukrainian</a></li>
 						<li><a href="#" id="56">Niderland</a></li>
+						<li><a href="#" id="57">China</a></li>
 					    </ul>
 					</div>
                                 </div>
