--- a/admin/index.html
+++ b/admin/index.html
@@ -5,10 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Admin WebRTC Translation</title>
-	<script type="text/javascript" src="js/jquery.min.js" ></script>
-	<script type="text/javascript" src="js/bootstrap.js"></script>
-	<script type="text/javascript" src="js/bootbox.min.js"></script>
-	<script type="text/javascript" src="js/spin.min.js"></script>
+	<script type="text/javascript" src="../js/oidc-client.min.js"></script>
+	<script type="text/javascript" src="../js/jsrsasign-all-min.js"></script>
+	<script type="text/javascript" src="../js/jquery-1.9.1.min.js" ></script>
+	<script type="text/javascript" src="../js/trlauth.js"></script>
+	<script type="text/javascript" src="../js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="../js/bootbox.min.js"></script>
 	<script type="text/javascript" src="js/control.js"></script>
 	<script type="text/javascript" src="js/adapter.js?2" ></script>
 	<script type="text/javascript" src="js/janus.js?2" ></script>
