Add auth to chat

--- a/admin/index.html
+++ b/admin/index.html
@@ -11,11 +11,11 @@
 	<script type="text/javascript" src="../js/trlauth.js"></script>
 	<script type="text/javascript" src="../js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="../js/bootbox.min.js"></script>
-	<script type="text/javascript" src="js/control.js"></script>
-	<script type="text/javascript" src="js/adapter.js?2" ></script>
-	<script type="text/javascript" src="js/janus.js?2" ></script>
-	<script type="text/javascript" src="js/trlshidur.js?2"></script>
-	<script type="text/javascript" src="js/chat.js?2"></script>
+	<script type="text/javascript" src="../js/control.js"></script>
+	<script type="text/javascript" src="../js/adapter.js" ></script>
+	<script type="text/javascript" src="../js/janus.js" ></script>
+	<script type="text/javascript" src="js/trlshidur.js"></script>
+	<script type="text/javascript" src="js/chat.js"></script>
 	<link rel="stylesheet" href="css/cerulean/bootstrap.css" type="text/css"/>
 	<link rel="stylesheet" href="css/demo.css" type="text/css"/>
 	<link rel="stylesheet" href="css/font-awesome.css"/>
