Refactor files allocation

--- a/admin/index.html
+++ b/admin/index.html
@@ -14,8 +14,8 @@
 	<script type="text/javascript" src="../js/control.js"></script>
 	<script type="text/javascript" src="../js/adapter.js" ></script>
 	<script type="text/javascript" src="../js/janus.js" ></script>
-	<script type="text/javascript" src="js/trlshidur.js"></script>
-	<script type="text/javascript" src="js/chat.js"></script>
+	<script type="text/javascript" src="../js/adminclient.js"></script>
+	<script type="text/javascript" src="../js/adminchat.js"></script>
 	<link rel="stylesheet" href="css/cerulean/bootstrap.css" type="text/css"/>
 	<link rel="stylesheet" href="css/demo.css" type="text/css"/>
 	<link rel="stylesheet" href="css/font-awesome.css"/>
