--- a/chat/index.html
+++ b/chat/index.html
@@ -13,8 +13,8 @@
 	<script type="text/javascript" src="../js/bootbox.min.js"></script>
 	<script type="text/javascript" src="../js/adapter.js" ></script>
 	<script type="text/javascript" src="../js/janus.js" ></script>
-	<script type="text/javascript" src="js/trlclient.js"></script>
-	<script type="text/javascript" src="js/chat.js"></script>
+	<script type="text/javascript" src="../js/chatclient.js"></script>
+	<script type="text/javascript" src="../js/chat.js"></script>
 	<link rel="stylesheet" href="css/cerulean/bootstrap.css" type="text/css"/>
 	<link rel="stylesheet" href="css/demo.css" type="text/css"/>
 	<link rel="stylesheet" href="css/font-awesome.css"/>
