--- a/mini/index.html
+++ b/mini/index.html
@@ -16,7 +16,7 @@
 	<script type="text/javascript" src="../js/janus.js" ></script>
 	<script type="text/javascript" src="../js/vmeter.js"></script>
 	<script type="text/javascript" src="../js/trlclient.js"></script>
-	<script type="text/javascript" src="../js/chat.js"></script>
+	<script type="text/javascript" src="../js/trlchat.js"></script>
 	<link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css"/>
 	<link rel="stylesheet" href="../css/demo.css" type="text/css"/>
 	<link rel="stylesheet" href="../css/font-awesome.min.css">
