--- a/login/index.html
+++ b/login/index.html
@@ -34,12 +34,12 @@
 </div>
 
 <div class="container">
-	<div class="row middled" style="width: 550px;">
+	<div class="row middled" style="width: 650px;right: 40px;">
 		<div class="col-md-10">
 			<button class="btn btn-info btn-lg" autocomplete="off" id="main">Main</button>
 			<button class="btn btn-primary btn-lg" autocomplete="off" id="mini">Mini</button>
-			<!--button class="btn btn-success btn-lg" autocomplete="off" id="chat">Chat</button-->
-			<!--button class="btn btn-danger btn-lg disabled" autocomplete="off" id="admin" >Admin</button-->
+			<button class="btn btn-success btn-lg" autocomplete="off" id="chat">Chat</button>
+			<button class="btn btn-warning btn-lg" autocomplete="off" id="admin" >Admin</button>
 		</div>
 	</div>
 </div>
