--- a/admin/index.html
+++ b/admin/index.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript" src="../js/trlauth.js"></script>
 	<script type="text/javascript" src="../js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="../js/bootbox.min.js"></script>
-	<script type="text/javascript" src="../js/control.js"></script>
+	<script type="text/javascript" src="js/control.js"></script>
 	<script type="text/javascript" src="../js/adapter.js" ></script>
 	<script type="text/javascript" src="../js/janus.js" ></script>
 	<script type="text/javascript" src="../js/adminclient.js"></script>
