--- a/login/index.html
+++ b/login/index.html
@@ -35,7 +35,7 @@
 
 <div class="container">
 	<div class="row middled" style="width: 650px;right: 40px;">
-		<div class="col-md-10">
+		<div class="col-md-10" style="width: 650px;right: 40px;">
 			<button class="btn btn-info btn-lg" autocomplete="off" id="main">Main</button>
 			<button class="btn btn-primary btn-lg" autocomplete="off" id="mini">Mini</button>
 			<button class="btn btn-success btn-lg" autocomplete="off" id="chat">Chat</button>
