set appname to state callback

--- a/admin/index.html
+++ b/admin/index.html
@@ -46,6 +46,7 @@
 			padding: 1px 3px
 		}
 	</style>
+	<script>const appname = "admin"</script>
 	<script>
 		// request permission on page load
 		document.addEventListener('DOMContentLoaded', function () {
