--- a/main/index.html
+++ b/main/index.html
@@ -21,9 +21,9 @@
 	<link rel="stylesheet" href="../css/style.css" type="text/css"/>
 	<link rel="stylesheet" href="../css/font-awesome.min.css">
 	<link href="../css/slider2.css" rel="stylesheet">
+	<script>const appname = "main"</script>
 </head>
 <body>
-</script-->
 <div class="container">
 	<div class="page-header">
 		<div class="row">
