--- a/mini/index.html
+++ b/mini/index.html
@@ -21,6 +21,7 @@
 	<link rel="stylesheet" href="../css/demo.css" type="text/css"/>
 	<link rel="stylesheet" href="../css/font-awesome.min.css">
 	<link href="../css/slider2.css" rel="stylesheet">
+	<script>const appname = "mini"</script>
 </head>
 <body>
 <div class="container">
