--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	new Oidc.UserManager().signinRedirectCallback().then(function(user) {
 		console.log("Signin response success", user);
 		console.log("State: ", user.state);
-		var path = localStorage.path;
-		window.location = "/"+path;
+		window.location = "/"+user.state;
 	}).catch(function(err) {
 		window.location = "/login";
 		console.log("callback error",err);
