--- a/admin/index.html
+++ b/admin/index.html
@@ -162,7 +162,7 @@
 				</div>
 			</div>
 		</div>
-		<!--iframe width="1200" height="800" src="../grpchat/index.html" class="iframe" scrolling="no" frameborder="0"></iframe-->
+		<iframe width="1200" height="800" src="../grpchat/index.html" class="iframe" scrolling="no" frameborder="0"></iframe>
 	</div>
 </div>
 </div>
